<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    >
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsFragment"
    android:background="@color/dark_grey"
    tools:context=".ui.settings.SettingsFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Collection Day Reminder Notification"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <Switch
                android:layout_weight="1"
                android:id="@+id/notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="10dp"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/features"
                android:textSize="25sp"
                android:textColor="@color/yellow"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature_details"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature_details2"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature_details3"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature_details4"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/help"
                android:textSize="25sp"
                android:textColor="@color/yellow"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_desc"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                />
        </LinearLayout>


    </LinearLayout>


</FrameLayout>
</ScrollView>